fix profile scrolling, fix address bar height on mobile screen

--- a/src/components/posts/posts.component.scss
+++ b/src/components/posts/posts.component.scss
@@ -1,5 +1,6 @@
 .posts{
     position: relative;
+    height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
@@ -7,4 +8,5 @@
     gap: 6rem 3rem;
     padding: 0 3rem;
     margin: 2rem 0;
+    @include scroll;
 }
